--- a/src/app/toolbar.css
+++ b/src/app/toolbar.css
@@ -3,7 +3,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-color: antiquewhite; */
 }
 
 .toolbar .logo {
@@ -18,7 +17,7 @@
 }
 
 .toolbar > ul {
-  width: 25%;
+  width: 200px;
   list-style: none;
   display: flex;
   justify-content: space-evenly;
